--- a/mastery-front-end-shuttle-smashers/package.json
+++ b/mastery-front-end-shuttle-smashers/package.json
@@ -1,31 +1,28 @@
 {
-  "name": "mastery-front-end-shuttle-smashers",
-  "version": "0.1.0",
-  "private": true,
+  "name": "admin-frontend",
+  "version": "1.0.0",
+  "main": "index.js",
   "dependencies": {
-    "react": "^16.12.0",
-    "react-dom": "^16.12.0",
-    "react-scripts": "3.2.0"
+    "webpack": "^4.41.2",
+    "webpack-cli": "^3.3.10",
+    "webpack-dev-server": "^3.9.0"
   },
+  "devDependencies": {},
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "start": "webpack-dev-server --mode development --content-base docs/ --open --hot"
   },
-  "eslintConfig": {
-    "extends": "react-app"
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/2019-Fall-Cohort/admin-front-end-biscuit-time.git"
   },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  }
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/2019-Fall-Cohort/admin-front-end-biscuit-time/issues"
+  },
+  "homepage": "https://github.com/2019-Fall-Cohort/admin-front-end-biscuit-time#readme",
+  "directories": {
+    "doc": "docs"
+  },
+  "description": ""
 }
