--- a/mastery-front-end-shuttle-smashers/package.json
+++ b/mastery-front-end-shuttle-smashers/package.json
@@ -13,7 +13,7 @@
   },
   "devDependencies": {},
   "scripts": {
-    "start": "webpack-dev-server --mode development --content-base docs/ --open --hot",
+    "start": "webpack-dev-server --mode development --content-base docs/ --open --hot"
   },
   
   "repository": {
@@ -25,6 +25,5 @@
   "bugs": {
     "url": "https://github.com/2019-Fall-Cohort/mastery-front-end-shuttle-smashers.api/issues"
   },
-  "homepage": "https://github.com/2019-Fall-Cohort/mastery-front-end-shuttle-smashers.api#readme",
- 
-
+  "homepage": "https://github.com/2019-Fall-Cohort/mastery-front-end-shuttle-smashers.api#readme"
+}
